# sprl

./: .gitignore  LICENSE  README.md  bonk.ipynb  elo.ipynb  elos.pkl  elos_1.pkl  elos_2.pkl  go_main.sh  logs_to_elo.ipynb  main.sh  othello_main.sh  parse.ipynb  pentago_main.sh  plots.ipynb  requirements.txt  robin.py  robin.sh  robin2.sh  robin_main.sh  setup.py
config/: config_controller.json  config_selfplay.json  config_uct.json
cpp/: CMakeLists.txt
cpp/src/: C4SelfPlay.cpp  C4Worker.cpp  Challenge.cpp  Evaluate.cpp  GoWorker.cpp  OTHWorker.cpp  PTGSelfPlay.cpp  PTGWorker.cpp  Peek.cpp  RobinWorker.cpp  TestGame.cpp  TestJson.cpp  TestSymmetries.cpp  Time.cpp  challenge.cpp  constants.hpp  selfPlay.cpp  self_play.cpp  testGame.cpp
cpp/src/agents/: Agent.hpp  HumanAgent.hpp  HumanGoAgent.hpp  HumanGridAgent.hpp  HumanOthelloAgent.cpp  HumanOthelloAgent.hpp  HumanPentagoAgent.cpp  HumanPentagoAgent.hpp  IAgent.hpp  UCTNetworkAgent.hpp
cpp/src/evaluate/: play.hpp
cpp/src/games/: ConnectFour.cpp  ConnectFour.hpp  ConnectFourNode.cpp  ConnectFourNode.hpp  Game.hpp  GameActionDist.hpp  GameNode.hpp  GameState.hpp  Go.cpp  Go.hpp  Go.md  GoDesc.md  GoNode.cpp  GoNode.hpp  GridState.hpp  Othello.cpp  Othello.hpp  OthelloNode.cpp  OthelloNode.hpp  Pentago.cpp  Pentago.hpp
cpp/src/games/go_utils/: SGF.hpp  SGF_spec.md
cpp/src/interface/: npy.hpp
cpp/src/networks/: ConnectFourNetwork.cpp  ConnectFourNetwork.hpp  GridNetwork.hpp  INetwork.hpp  Network.hpp  OthelloHeuristic.cpp  OthelloHeuristic.hpp  OthelloNetwork.cpp  OthelloNetwork.hpp  PentagoHeuristic.cpp  PentagoHeuristic.hpp  PentagoNetwork.cpp  PentagoNetwork.hpp  RandomNetwork.hpp
cpp/src/random/: Random.cpp  Random.hpp  Zobrist.hpp
cpp/src/selfplay/: GridWorker.hpp  Options.hpp  SelfPlay.hpp  SelfPlayOptions.hpp  Worker.hpp  options.md
cpp/src/symmetry/: ConnectFourSymmetrizer.cpp  ConnectFourSymmetrizer.hpp  D4GridSymmetrizer.hpp  ISymmetrizer.hpp
cpp/src/tqdm/: tqdm.hpp
cpp/src/uct/: UCTDesc.md  UCTNode.hpp  UCTOptions.hpp  UCTTree.hpp
cpp/src/utils/: DSU.hpp  Zobrist.hpp  npy.hpp  random.cpp  timer.hpp
cpp/tests/: CMakeLists.txt  test_c4.cpp
notebooks/: elo.ipynb  logs_to_elo.ipynb
prototype/: ddp.py  torchrun_ddp.py  utils.py
robin/: robin.sh  robin_main.sh
scripts/: connect_four.py  connect_four_controller.py  connect_four_controller.sh  connect_four_pp.py  go_controller.py  go_controller.sh  go_worker.sh  othello_controller.py  othello_controller.sh  othello_worker.sh  pentago.py  pentago.sh  pentago_controller.py  pentago_controller.sh  pentago_worker.py  pentago_worker.sh  reconstruct.py
src/: pentago_constants.py
src/agents/: agent.py  human_agent.py  policy_agent.py  random_agent.py
src/evaluator/: play.py
src/games/: connect_k.py  game.py
src/interface/: run_self_play.py  tracer.py
src/networks/: connect_four_network.py  grid_networks.py  network.py  new_connect_four_network.py  othello_network.py  pentago_network.py
src/policies/: monte_carlo_policy.py  network_policy.py  policy.py  random_policy.py  uct_policy.py
src/train/: self_play.py
src/uct/: uct_alg.py  uct_node.py
src/utils/: pretty_matrix.py
tests/: interactive_test.py  peek.py  robin.py  robin_master.sh  robin_worker.sh
